users can now submit their registration
