# server/api/user-utility/self/router.js
@@ -1,4 +1,5 @@
 const express = require('express')
+const { reject } = require('lodash')
 const db = require('../../../db')
 const updateQueryGenerator = require('../../../updateQuery')
 const columnNames = require('./columnNames')
@@ -21,11 +22,28 @@ router.get('/', (req, res) => {
 router.put('/', (req, res) => {
     // #swagger.tags = ['user-utility/self']
     // #swagger.summary = "Modify information about yourself"
-    if (req.session.passport && req.session.passport.id && req.body) {
+    console.log(req.session)
+    if (req.session.passport && req.session.passport.user.id && req.body) {
         const clientInfo = req.body
         delete clientInfo.admin
         delete clientInfo.google_id
-        const {query, rows} = updateQueryGenerator('user_entry', columnNames, clientInfo)
+        delete clientInfo.created_datetime
+        delete clientInfo.lastmodified_datetime
+        clientInfo.id = req.session.passport.user.id
+        const {query, values} = updateQueryGenerator('user_entry', columnNames, clientInfo)
+        console.log('query: ', query)
+        console.log('values: ', values)
+        db.query(query, values, (err, rows) => {
+            if (err) {
+                console.log(err)
+                res.status(500).json({err: err})
+            } else {
+                req.session.passport.user = rows[0]
+                res.json(rows)
+            }
+        })
+    } else {
+        res.sendStatus(400)
     }
 })
 
