# server/swagger.json
@@ -118,12 +118,31 @@
                 },
                 "google_id": {
                   "example": "any"
+                },
+                "created_datetime": {
+                  "example": "any"
+                },
+                "lastmodified_datetime": {
+                  "example": "any"
+                },
+                "id": {
+                  "example": "any"
                 }
               }
             }
           }
         ],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     },
     "/api/user-utility/stats/": {
